# ytxp-sdk

./: .gitignore  Makefile  README.md  cabal.project  doc-index.html  flake.nix  index.html
nix/: checks.nix  gh-pages.nix  packages.nix  project.nix
ytxp-sdk/: cabal.project  ytxp-sdk.cabal
ytxp-sdk/goldens/: SdkParameters.golden
ytxp-sdk/html/: Cardano-YTxP-SDK-ControlParameters.html  Cardano-YTxP-SDK-Optics.html  Cardano-YTxP-SDK-Redeemers.html  Cardano-YTxP-SDK-SdkParameters.html  doc-index.html  doc-index.json  index.html  ytxp-sdk.haddock  ytxp-sdk.txt
ytxp-sdk/html/src/: Cardano.YTxP.SDK.ControlParameters.html  Cardano.YTxP.SDK.Optics.html  Cardano.YTxP.SDK.Redeemers.html  Cardano.YTxP.SDK.SdkParameters.html
ytxp-sdk/src/Cardano/YTxP/SDK/: ControlParameters.hs  Optics.hs  Redeemers.hs  SdkParameters.hs  Vendored.hs
ytxp-sdk/test/: Main.hs
ytxp-sdk/testlib/Test/: Laws.hs
